--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
-<DOCTYPE html>
-<h1> Welcome to Soles News! </h1>
+<!doctype html>
+<html>
+  <title>
+    <h1> Welcome to Soles News! </h1>
+  </title>
+</html>
