--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
-  <title>
-    <h1> Welcome to Soles News! </h1>
-  </title>
+  <head>
+    <title>
+      <h1> Welcome to Soles News! </h1>
+    </title>
+  </head>
 </html>
