--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
       <h1> Welcome to Soles News! </h1>
     </title>
   </head>
-  just some random text
+  <body>
+    just some random text
+  </body>
 </html>
