--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>
       <h1> Welcome to Soles News! </h1>
     </title>
+    <link href="styles/main.css" rel="stylesheet" />
   </head>
   <body>
     just some random text
