--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      <h1> Welcome to Soles News! </h1>
+      Welcome to Soles News!
     </title>
     <link href="styles/main.css" rel="stylesheet" />
   </head>
