--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>
       Welcome to Soles News!
     </title>
+    <h1>Welcome</h1>
     <link href="styles/main.css" rel="stylesheet" />
   </head>
   <body>
