--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <li>
-      <p>
-        just some random text
-      </p>
+      
+      <p>just some random text
+      
     </li>
   </body>
 </html>
